--- a/index.html
+++ b/index.html
@@ -3,52 +3,78 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Weather, Policy, Topic Modeling and Migration of Homelessness in San Diego</title>
-  <meta name="description" content="Project site exploring relationships between weather, municipal policy, and homeless encampment migration in San Diego through topic modeling of 311 reports." />
-  <meta name="theme-color" content="#0b0e14" />
+  <title>Weather, Policy, and Topic Modeling of 311 Reports on Homelessness in San Diego</title>
+  <meta name="description" content="Exploring how weather and policy relate to encampment migration in San Diego using topic modeling of homelessness-related 311 reports." />
+  <meta name="theme-color" content="#ffffff" />
   <style>
     :root{
-      --bg:#0b0e14;
-      --panel:#101522;
-      --text:#eaf1ff;
-      --muted:#a6b0c3;
-      --brand:#5dd0ff;
-      --brand-2:#49ffa3;
-      --radius:16px;
-      --shadow:0 10px 30px rgba(0,0,0,.35), 0 2px 10px rgba(0,0,0,.2);
+      /* Light theme */
+      --bg:#f7f9fc;          /* page background */
+      --panel:#ffffff;       /* cards/sheets */
+      --border:#e5eaf2;      /* subtle borders */
+      --text:#0f172a;        /* main text */
+      --muted:#5b6475;       /* secondary text */
+      --brand:#2f6fff;       /* primary brand */
+      --brand-2:#8b5cf6;     /* secondary brand */
+      --accent:#22c55e;      /* accent */
+      --radius:18px;         /* default radius */
+      --shadow:0 16px 40px rgba(21, 41, 82, .08), 0 2px 8px rgba(21,41,82,.06);
+      --ring:0 0 0 4px rgba(47,111,255,.15);
+      --max: 1100px;
     }
     *{box-sizing:border-box}
-    html,body{margin:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui,Segoe UI,Roboto,Inter,Arial,sans-serif}
+    html,body{margin:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui, Segoe UI, Roboto, Inter, Arial, sans-serif}
     a{color:inherit;text-decoration:none}
-    .container{max-width:1100px;margin:auto;padding:0 20px}
+    img{max-width:100%;display:block}
+    .container{max-width:var(--max);margin:auto;padding:0 20px}
 
-    header.site{position:sticky;top:0;z-index:20;background:rgba(11,14,20,.8);backdrop-filter:saturate(140%) blur(8px);border-bottom:1px solid rgba(255,255,255,.08)}
-    .nav{display:flex;align-items:center;justify-content:space-between;padding:14px 0}
+    /* Header */
+    header.site{position:sticky;top:0;z-index:20;background:rgba(255,255,255,.8);backdrop-filter:saturate(140%) blur(8px);border-bottom:1px solid var(--border)}
+    .nav{display:flex;align-items:center;justify-content:space-between;padding:12px 0}
     .brand{display:flex;align-items:center;gap:10px;font-weight:800}
-    .brand-badge{width:34px;height:34px;border-radius:10px;background:linear-gradient(135deg,var(--brand),var(--brand-2));box-shadow:0 6px 18px rgba(73,255,163,.25)}
-    .links{display:flex;gap:18px}
-    .links a{opacity:.9}
+    .brand-badge{width:36px;height:36px;border-radius:12px;background:conic-gradient(from 220deg, var(--brand), var(--brand-2));box-shadow:0 8px 20px rgba(47,111,255,.25)}
+    .links{display:flex;gap:16px}
+    .btn{display:inline-flex;align-items:center;gap:8px;border:1px solid var(--border);padding:9px 14px;border-radius:999px;background:#fff}
+    .btn:hover{box-shadow:var(--ring)}
 
-    .hero{padding:76px 0 48px}
-    h1{font-size:clamp(1.8rem,4.5vw,3rem);line-height:1.15;margin:8px 0 10px}
-    .subtitle{color:var(--muted);margin:0 0 18px}
+    /* Hero */
+    .hero{padding:72px 0 42px}
+    h1{font-size:clamp(1.9rem,4.6vw,3.2rem);line-height:1.12;margin:8px 0 12px}
+    .subtitle{color:var(--muted);margin:0}
 
-    .panel{background:var(--panel);border:1px solid rgba(255,255,255,.08);border-radius:var(--radius);padding:20px;box-shadow:var(--shadow)}
+    /* Gradient banner behind title/description */
+    .gradient-wrap{position:relative;border-radius:26px;padding:28px;overflow:hidden;box-shadow:var(--shadow);border:1px solid var(--border);background:linear-gradient(135deg, rgba(47,111,255,.12), rgba(139,92,246,.12));}
+    .gradient-wrap::after{content:"";position:absolute;inset:0;background:radial-gradient(60% 80% at 20% 0%, rgba(255,255,255,.7), transparent 70%), radial-gradient(60% 60% at 100% 100%, rgba(255,255,255,.4), transparent 70%);pointer-events:none}
 
-    section.page{display:none;padding:36px 0}
-    section.page.active{display:block}
-    .nav.hidden{display:none}
-
+    /* Problem panel */
+    .panel{background:var(--panel);border:1px solid var(--border);border-radius:var(--radius);padding:22px;box-shadow:var(--shadow)}
     h2{margin:0 0 10px}
     p{margin:0 0 12px}
 
-    footer{border-top:1px solid rgba(255,255,255,.08);margin-top:40px}
-    .foot{padding:20px 0;color:var(--muted)}
+    /* Right overlay sidebar (sheet) */
+    .sheet{position:fixed;top:0;right:0;height:100dvh;width:min(420px, 92vw);background:var(--panel);border-left:1px solid var(--border);box-shadow:-20px 0 50px rgba(21,41,82,.12);transform:translateX(100%);transition:transform .28s ease;z-index:60;display:flex;flex-direction:column}
+    .sheet.open{transform:translateX(0)}
+    .sheet-head{display:flex;align-items:center;justify-content:space-between;padding:16px 16px;border-bottom:1px solid var(--border)}
+    .sheet-title{font-weight:800}
+    .sheet-body{padding:16px;overflow:auto}
+    .sheet-nav{display:flex;flex-wrap:wrap;gap:8px;padding:12px 16px;border-bottom:1px solid var(--border)}
+    .chip{padding:6px 10px;border:1px solid var(--border);border-radius:999px;background:#fff}
+    .chip.active{border-color:color-mix(in oklab, var(--brand) 45%, var(--border));box-shadow:var(--ring)}
 
-    @media (max-width: 900px){.links{display:none}}
+    /* Hide top links on home to preserve minimal first page */
+    .links.hidden{display:none}
+
+    /* Footer */
+    footer{border-top:1px solid var(--border);margin-top:44px}
+    .foot{padding:18px 0;color:var(--muted)}
+
+    @media (max-width: 880px){
+      .links{display:none}
+    }
   </style>
 </head>
 <body>
+  <!-- Header -->
   <header class="site" id="topbar">
     <div class="container nav">
       <div class="brand">
@@ -56,61 +82,169 @@
         <span id="project-short">Weather, Policy, and Topic Modeling of 311 Reports on Homelessness in San Diego</span>
       </div>
       <nav class="links" aria-label="Primary">
-        <a href="#about">About</a>
-        <a href="#311-analysis">311 Report Analysis</a>
-        <a href="#migration">Encampment Migration</a>
-        <a href="#weather">Weather</a>
-        <a href="#policy">Policy</a>
-        <a href="#conclusion">Conclusion</a>
-        <a href="#data">Data Description</a>
-        <a href="#team">Team</a>
+        <a href="#about" class="btn">About</a>
+        <a href="#311-analysis" class="btn">311 Analysis</a>
+        <a href="#migration" class="btn">Encampment Migration</a>
+        <a href="#weather" class="btn">Weather</a>
+        <a href="#policy" class="btn">Policy</a>
+        <a href="#conclusion" class="btn">Conclusion</a>
+        <a href="#data" class="btn">Data</a>
+        <a href="#team" class="btn">Team</a>
       </nav>
+      <button id="openSheetBtn" class="btn" aria-haspopup="dialog" aria-controls="sheet" aria-expanded="false">Pages</button>
     </div>
   </header>
 
+  <!-- Home (Title + Problem Statement only) -->
   <main>
-    <section id="home" class="page active" aria-labelledby="home-title">
+    <section id="home" aria-labelledby="home-title" style="padding:36px 0 20px">
       <div class="container">
-        <header class="hero">
+        <div class="gradient-wrap" role="region" aria-label="Project hero">
           <h1 id="home-title">Weather, Policy, and Topic Modeling of Homelessness‑Related 311 Reports in San Diego</h1>
-          <p class="subtitle">Exploring how environmental factors and city policy influence the spatial and thematic patterns of homelessness in San Diego using data‑driven topic modeling and spatial analysis.</p>
-        </header>
-        <article class="panel" aria-label="Problem statement">
+          <p class="subtitle">A data‑driven look at how environmental conditions and municipal policy intersect with the <em>topics</em> reported in 311 calls, and how these patterns relate to encampment migration across the city.</p>
+        </div>
+        <article class="panel" aria-label="Problem statement" style="margin-top:20px">
           <h2>Problem Statement</h2>
-          <p>
-            San Diego has seen ongoing challenges related to homelessness, with encampments shifting dynamically across urban areas. While both weather variability and policy enforcement are thought to influence these movements, quantitative evidence remains limited.
-          </p>
-          <p>
-            This project leverages <strong>topic modeling</strong> of homelessness‑related <strong>311 service requests</strong> to uncover recurring themes in public reporting and connect them with <strong>spatial encampment migration</strong>, <strong>local weather patterns</strong>, and <strong>policy actions</strong>. Our objective is to provide data‑driven insight into the intersection of environmental conditions, governance, and the lived realities of unhoused populations.
-          </p>
+          <p>San Diego faces recurring shifts in the distribution and persistence of homeless encampments. While weather variability (heat, rain, cold snaps) and policy actions (ordinances, sweeps, service expansions) are suspected drivers, quantitative evidence linking these factors to the <em>discourse</em> found in public 311 reports and to observed encampment migration remains limited.</p>
+          <p>This project applies <strong>topic modeling</strong> to homelessness‑related 311 requests to identify recurring themes, and examines their associations with <strong>local weather</strong>, <strong>policy timelines</strong>, and <strong>space‑time movement</strong> of encampments. Our aim is to inform humane, effective, and climate‑aware responses.</p>
         </article>
       </div>
     </section>
-
-    <section id="about" class="page"><div class="container"><h2>About</h2><div class="panel"><p>Project motivation, scope, and interdisciplinary framework connecting GIS, urban policy, and natural language processing.</p></div></div></section>
-    <section id="311-analysis" class="page"><div class="container"><h2>311 Report Analysis</h2><div class="panel"><p>Preprocessing, topic modeling methods (LDA/BERT), and thematic clustering of homelessness‑related reports.</p></div></div></section>
-    <section id="migration" class="page"><div class="container"><h2>Homeless Encampment Migration</h2><div class="panel"><p>Spatial mobility patterns of encampments derived from report clusters over time.</p></div></div></section>
-    <section id="weather" class="page"><div class="container"><h2>Weather</h2><div class="panel"><p>Analysis of temperature, precipitation, and seasonality in relation to topic prevalence and encampment shifts.</p></div></div></section>
-    <section id="policy" class="page"><div class="container"><h2>Policy</h2><div class="panel"><p>Documentation of city ordinances, sweeps, and outreach initiatives contextualizing encampment changes.</p></div></div></section>
-    <section id="conclusion" class="page"><div class="container"><h2>Conclusion</h2><div class="panel"><p>Findings linking discourse, weather, and policy; implications for humane and data‑informed urban governance.</p></div></div></section>
-    <section id="data" class="page"><div class="container"><h2>Data Description</h2><div class="panel"><p>Sources: City of San Diego 311 API, NOAA weather archives, and municipal policy datasets.</p></div></div></section>
-    <section id="team" class="page"><div class="container"><h2>Team</h2><div class="panel"><p>Project contributors, roles, and acknowledgments.</p></div></div></section>
   </main>
 
-  <footer><div class="container foot"><small>© <span id="y"></span> Project Site</small></div></footer>
+  <!-- Right overlay sheet with pages -->
+  <aside id="sheet" class="sheet" role="dialog" aria-modal="true" aria-label="Project pages">
+    <div class="sheet-head">
+      <div class="sheet-title" id="sheetTitle">Pages</div>
+      <button id="closeSheetBtn" class="btn" aria-label="Close panel">Close</button>
+    </div>
+    <div class="sheet-nav" role="tablist">
+      <a href="#about" role="tab" class="chip" data-target="about">About</a>
+      <a href="#311-analysis" role="tab" class="chip" data-target="311-analysis">311 Analysis</a>
+      <a href="#migration" role="tab" class="chip" data-target="migration">Encampment Migration</a>
+      <a href="#weather" role="tab" class="chip" data-target="weather">Weather</a>
+      <a href="#policy" role="tab" class="chip" data-target="policy">Policy</a>
+      <a href="#conclusion" role="tab" class="chip" data-target="conclusion">Conclusion</a>
+      <a href="#data" role="tab" class="chip" data-target="data">Data</a>
+      <a href="#team" role="tab" class="chip" data-target="team">Team</a>
+    </div>
+    <div class="sheet-body">
+      <!-- Secondary page sections live here; visible only inside sheet -->
+      <section id="about" class="page" aria-labelledby="about-title">
+        <h2 id="about-title">About</h2>
+        <p>Project motivation, scope, and research questions connecting GIS, urban policy, and NLP topic modeling.</p>
+      </section>
+
+      <section id="311-analysis" class="page" aria-labelledby="r311-title">
+        <h2 id="r311-title">311 Report Analysis</h2>
+        <p>Text preprocessing, topic models (e.g., LDA or BERTopic), validation, and interpretation of homelessness‑related themes.</p>
+      </section>
+
+      <section id="migration" class="page" aria-labelledby="migration-title">
+        <h2 id="migration-title">Homeless Encampment Migration</h2>
+        <p>Measures of spatial movement, clustering, and change over time; relating topic prevalence to movement dynamics.</p>
+      </section>
+
+      <section id="weather" class="page" aria-labelledby="weather-title">
+        <h2 id="weather-title">Weather</h2>
+        <p>Temperature, precipitation, and seasonal effects; thresholds and event days; associations with topic prevalence and encampment changes.</p>
+      </section>
+
+      <section id="policy" class="page" aria-labelledby="policy-title">
+        <h2 id="policy-title">Policy</h2>
+        <p>Ordinances, enforcement operations, outreach and shelter policies; aligning interventions with observed patterns.</p>
+      </section>
+
+      <section id="conclusion" class="page" aria-labelledby="conclusion-title">
+        <h2 id="conclusion-title">Conclusion</h2>
+        <p>Key takeaways, limitations, and implications for humane and data‑informed urban governance.</p>
+      </section>
+
+      <section id="data" class="page" aria-labelledby="data-title">
+        <h2 id="data-title">Data Description</h2>
+        <p>Sources (City of San Diego 311 API, NOAA, municipal policy docs), fields, coverage, geocoding, and processing notes.</p>
+      </section>
+
+      <section id="team" class="page" aria-labelledby="team-title">
+        <h2 id="team-title">Team</h2>
+        <p>Contributors, roles, and acknowledgments.</p>
+      </section>
+    </div>
+  </aside>
+
+  <footer>
+    <div class="container foot"><small>© <span id="y"></span> Project Site</small></div>
+  </footer>
 
   <script>
-    const pages = Array.from(document.querySelectorAll('section.page'));
-    const topbar = document.getElementById('topbar');
-    function setRoute(){
-      const hash=(location.hash||'#home').toLowerCase();
-      pages.forEach(p=>p.classList.toggle('active',`#${p.id}`===hash));
-      if(hash==='#home'){topbar.classList.add('hidden');}else{topbar.classList.remove('hidden');}
-      const active=document.querySelector('section.page.active h2,section.page.active h1');
-      if(active){active.setAttribute('tabindex','-1');active.focus&&active.focus();}
+    const sheet = document.getElementById('sheet');
+    const openBtn = document.getElementById('openSheetBtn');
+    const closeBtn = document.getElementById('closeSheetBtn');
+    const topLinks = document.querySelector('.links');
+    const chips = Array.from(document.querySelectorAll('.chip'));
+
+    function openSheet(){
+      sheet.classList.add('open');
+      openBtn.setAttribute('aria-expanded','true');
+      // set active chip from hash
+      const hash=(location.hash||'#about').replace('#','');
+      setActive(hash);
+      focusActive();
     }
-    window.addEventListener('hashchange',setRoute);
-    window.addEventListener('load',()=>{document.getElementById('y').textContent=new Date().getFullYear();setRoute();});
+    function closeSheet(){
+      sheet.classList.remove('open');
+      openBtn.setAttribute('aria-expanded','false');
+    }
+    function setActive(id){
+      chips.forEach(c=>c.classList.toggle('active', c.dataset.target===id));
+      // scroll to the selected section inside the sheet
+      const target=document.getElementById(id);
+      if(target){ target.scrollIntoView({block:'start', behavior:'smooth'}); }
+    }
+    function focusActive(){
+      const activeChip=document.querySelector('.chip.active');
+      if(activeChip){ activeChip.focus(); }
+    }
+
+    // Route: open sheet when navigating to any subpage; keep home minimal.
+    function route(){
+      const h=(location.hash||'#home').toLowerCase();
+      if(h==='#home'){
+        topLinks.classList.add('hidden');
+        closeSheet();
+      } else {
+        topLinks.classList.remove('hidden');
+        openSheet();
+        setActive(h.replace('#',''));
+      }
+    }
+
+    // Link behavior for header buttons (ensure sheet opens)
+    document.addEventListener('click', (e)=>{
+      const a=e.target.closest('a[href^="#"]');
+      if(!a) return;
+      const id=a.getAttribute('href').replace('#','');
+      if(id && id!=='home'){
+        e.preventDefault();
+        history.pushState(null, '', '#'+id);
+        route();
+      }
+    });
+
+    chips.forEach(chip=>chip.addEventListener('click',(e)=>{
+      const id=e.currentTarget.dataset.target;
+      history.pushState(null,'','#'+id);
+      setActive(id);
+    }));
+
+    openBtn.addEventListener('click', openSheet);
+    closeBtn.addEventListener('click', closeSheet);
+
+    window.addEventListener('hashchange', route);
+    window.addEventListener('load', ()=>{
+      document.getElementById('y').textContent = new Date().getFullYear();
+      route();
+    });
   </script>
 </body>
 </html>
